--- a/.github/workflows/SonarQube.yml
+++ b/.github/workflows/SonarQube.yml
@@ -28,9 +28,9 @@ jobs:
           SONAR_ARCHITECTURE_EXPORT_ISSUES: true
       - name: ls
         run: |
-          ls -lR /home/runner/work/anchore-engine/anchore-engine/.scannerwork
-      - name: Store dna xml & json files
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ github.event.repository.name }}-dna-scan-artifacts
-          path: /home/runner/work/anchore-engine/anchore-engine/.scannerwork/architecture/exports/
+          ls -lR .
+#      - name: Store dna xml & json files
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: ${{ github.event.repository.name }}-dna-scan-artifacts
+#          path: /home/runner/work/anchore-engine/anchore-engine/.scannerwork/architecture/exports/
